Fix broken image links & text align

--- a/static/css/person.css
+++ b/static/css/person.css
@@ -16,7 +16,7 @@
 }
 html, body{
     padding: 16px 0;
-    background: #445468 url('./bg.png') repeat 0 0;
+    background: #445468 url('../img/bg.png') repeat 0 0;
 }
 #wrapper{
     width: 500px;
@@ -82,7 +82,7 @@ html, body{
 .profile-more{
     width: 24px;
     height: 24px;
-    background: transparent url('./btn_more.png') no-repeat 50% 50%;
+    background: transparent url('../img/btn_more.png') no-repeat 50% 50%;
     position: absolute;
     top: 10px;
     right: 16px;
@@ -100,16 +100,23 @@ html, body{
     float: left;
 }
 .position>.sub-title{
-    background: url('./icon_position.png') no-repeat 0 50%;
+    background: url('../img/icon_position.png') no-repeat 0 50%;
 }
 .attendance>.sub-title{
-    background: url('./icon_attendance.png') no-repeat 0 50%;
+    background: url('../img/icon_attendance.png') no-repeat 0 50%;
+}
+.score-attendance-content{
+    float: right;
+    font-size: 12px;
+    color: #959595;
+    line-height: 20px;
+    margin: 10px 12px 0 0;
 }
 .vote>.sub-title{
-    background: url('./icon_vote.png') no-repeat 0 50%;
+    background: url('../img/icon_vote.png') no-repeat 0 50%;
 }
 .idea>.sub-title{
-    background: url('./icon_idea.png') no-repeat 0 50%;
+    background: url('../img/icon_idea.png') no-repeat 0 50%;
 }
 .position{
     height: 64px;
